# Telegram_parser

./: .gitignore  README.md  pyproject.toml
src/: cvs_writer.py  parser.py  telegram_client.py  utils.py
test/: test_utils.py
